--- a/setting/app/index.html
+++ b/setting/app/index.html
@@ -5,9 +5,10 @@
 </head>
 
 <body>
-    <!--<script type="text/javascript" src="bundle.js" charset="utf-8"></script>-->
-    <script type="text/javascript" src="virtualpath/entry.js" charset="utf-8"></script>
-    <script type="text/javascript" src="virtualpath/entry1.js" charset="utf-8"></script>
+    <input type="tel" maxlength="11">
+    <!--<script type="text/javascript " src="bundle.js " charset="utf-8 "></script>-->
+    <script type="text/javascript " src="/virtualpath/entry.js " charset="utf-8 "></script>
+    <script type="text/javascript " src="/virtualpath/entry1.js " charset="utf-8 "></script>
 </body>
 
 </html>
